# analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  app_cobh_analysis.py  energy.py  pyproject.toml  refrigeration.py  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yml
energy_dashboard/: app.py
energy_dashboard/pages/: 01_⚡_Energy_Overview.py  02_📊_Peak_Demand.py  03_📈_Load_Analysis.py  04_⭐_Efficiency_Score.py  05_🔮_Load_Forecasting.py  06_🚨_Anomaly_Detection.py  07_📊_Period_Comparison.py  08_📄_Raw_Data.py  09_⚖️_Phase_Balance.py
pages/: 01_📊_Overview.py  02_🔄_Cooling_Cycles.py  03_❄️_Defrost_Cycles.py  04_📈_Temperature_Trends.py  05_🎯_Time_in_Range.py  06_🏥_Health_Score.py  07_🔍_Multi_Cabinet_Comparison.py  08_📄_PDF_Reports.py
refrigeration_dashboard/: app.py
refrigeration_dashboard/pages/: 02_🔄_Cooling_Cycles.py  03_❄️_Defrost_Cycles.py  04_📈_Temperature_Trends.py  05_🎯_Time_in_Range.py  06_🏥_Health_Score.py  07_🔍_Multi_Cabinet_Comparison.py  08_📄_PDF_Reports.py
utils/: __init__.py  calculations.py  dynamodb.py  refrigeration.py  refrigeration_api.py  tariffs.py
