[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "creim"
version = "0.1.0"
description = "Connected Resource & Energy Intelligence Monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James Troy" }]
keywords = ["energy", "monitoring", "IoT", "analytics", "modbus"]
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.2",
    "plotly>=5.20",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    'pip-tools>=7.5.3'
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = """
(
  migrations/
  | .venv/
  | dist/
  | build/
)
"""

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["creim"]
known_third_party = ["streamlit", "pandas", "numpy", "plotly"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
combine_as_imports = true


# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "."]
extend-exclude = [".venv", "dist", "build", "migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (ruff built-in)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length — handled by Black
    "B008",   # do not perform function calls in default arguments
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase (pandas df conventions)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["creim"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=creim --cov-report=term-missing"